# BLaIM

./: Cargo.toml  README.md  db.sqlite
.sqlx/: query-0507582fc8cd708934751fc2507caa7e5b4501160d75ed0be8c1369838021b3e.json  query-069d6286d752853dbd01455437205a59ea872e87e9e7ec34ddd194e00f99bb8e.json  query-0e0735ba4e1bb38cceeb022a81643089e2d117da06c3d4b71f01826ea0cbb7c0.json  query-15641a0bfe2be9353a5f05a9db92cdbb2fa118a54a278e4353b95851f4cd0f25.json  query-16aa9083bd547de26d88930362f5292ab59296985d2fbe9f4060665071a80dce.json  query-1aa97f650723e42a49526568b685c7bc11e338ffccda96718ed9d131f4ba0bcc.json  query-1ac083c413c0f1abca8167d9ae8802f82a01e6541a70a49a5500272ebd3fa86e.json  query-1c5a7edc7f0c76ea29fd71821a70856c8fd3a3af65ba39e76c7554eafc389a23.json  query-21f92229af0895590ac82b441ef0d3d6d30c1b26e6b5b5363401613e7a5a09a3.json  query-24380fcf0bcaf3d35b0d3892c850cd86c1d5f3df425b2278316833da4c6d840a.json  query-29e234486c0e1c605fd430b571111e49ec003a918e996ed9467a64b2af572868.json  query-2e4db5be84306ab11f203f67ab5929802faefdcb50b5a1875670adef0dbcdcbb.json  query-3621ea56246e08aacacb77678dcf430b8e07c9753adcbc5858511bc78f85bc26.json  query-3c6f09bca4666454a6b952b10849cb84aed50ad615179a1fd22aa1904bb83105.json  query-4444ef41f24259b8b37f297e112bdf1f22df571874006c17e55cb5d14f41a41a.json  query-44f3f64ce33faf20084189063aaf1850d49d8afa65626eb58ef570699c90a6ec.json  query-5f8d808aa7a195fc63f62d5195baee07ab5611ae0e053c90e95cd695d87bc79a.json  query-60d470e66aeb726341486a773a7d3363c75b9d383d0672d3c25522a9d1c0844a.json  (+13 more)
src/: db.rs  main.rs
