[package]
name = "blaim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version="1.0.83", features=["backtrace"]}
chrono = "0.4.38"
color-eyre = "0.6.3"
fuzzy-matcher = "0.3.7"
poise = "0.6.1"
serenity = "0.12.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
